AC_INIT(src/mib2opennms.c)
AM_INIT_AUTOMAKE(mib2opennms,0.2.2)
AM_CONFIG_HEADER(src/config.h)

dnl find and test the C compiler
AC_PROG_CC
AC_LANG_C
        
AC_PROG_INSTALL
AC_PROG_MAKE_SET
               
AC_HEADER_STDC

dnl check libsmi
AC_CHECK_LIB(smi,smiInit,,AC_MSG_ERROR(mib2opennms requires libsmi))
AC_CHECK_HEADER(smi.h,,AC_MSG_ERROR(mib2opennms requires smi.h))

dnl read Makefile.in and write Makefile
AC_OUTPUT(Makefile src/Makefile)
